2006-07-23  Jan Hubicka  <jh@suse.cz>

	* i386.md (subsi_3_zext): Fix output template.

2006-07-21  Mike Stump  <mrs@apple.com>

	* doc/invoke.texi (C++ Dialect Options): Note that
	-fvisibility-inlines-hidden doesn't affect explicitly
	instantiationed inline methods.

2006-07-20  Roger Sayle  <roger@eyesopen.com>

	* config.gcc (i[34567]86-*-solaris2*): Add usegas.h to $tm_file
	if the target assembler is GNU binutils' gas.
	* config/i386/sol2-10.h (ASM_SPEC): Check USE_GAS to determine
	whether to pass GNU gas or native as command line options.

2006-07-20  Jason Merrill  <jason@redhat.com>

	* tree.c (remove_attribute): New fn.
	* tree.h: Declare it.

2006-07-20  Paul Brook  <paul@codesourcery.com>

	PR 27363
	* cse.c (cse_insn): Add destination addresses to hash table. Check if
	they are invalidated by this instruction.

2006-07-21  Danny Smith  <dannysmith@users.sourceforge.net>

	PR target/28427
        * config/i386/cygming.h (MAX_OFILE_ALIGNMENT): Define.

2006-07-20  Eric Christopher  <echristo@apple.com>

	PR target/26877
	* config/i386/i386.h (OPTION_DEFAULT_SPECS): Reorder.

2006-07-19  Eric Christopher  <echristo@apple.com>

	* config/t-slibgcc-darwin (stmp-lipo): Remove.
	Rewrite dependencies for libgcc_s.1.dylib.

2006-07-19  Jakub Jelinek  <jakub@redhat.com>

	* except.c (duplicate_eh_regions_1): Clear next_peer.

2006-07-17  Nathan Sidwell  <nathan@codesourcery.com>

	* doc/invoke.texi (RS/6000 and PowerPC Options): Document that
	-mlongcall does not guarantee all calls will be long.
	* doc/extend.texi (long_call/short_call): Document that longcall
	does not guarantee a long call will be used.
	(longcall/shortcall): Likewise.

2006-07-18  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/28283
	* expmed.c (expand_shift): Additionally check that the shift_cost
	is not MAX_COST and that INTVAL(op1) is less than MAX_BITS_PER_WORD
	before implementing a LSHIFT_EXPR as a sequence of additions.