@@ -1,5 +1,5 @@
 ! PR13930
-! We were trying to assugn a default initializer to dummy variables.
+! We were trying to assign a default initializer to dummy variables.
 program der_init_4
   type t
     integer :: i = 42
